--- a/FrontEnd/upload_page/contact.css
+++ b/FrontEnd/upload_page/contact.css
@@ -1,7 +1,7 @@
 
 *{
 
-  background-color:#fcc857
+  background-color:#f9f9f9
 }
 
 
@@ -10,7 +10,7 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 20px;
-  background-color: #f4f4f4;
+  background-color: #fcc857
 }
 .container {
   display: flex;
@@ -29,7 +29,7 @@ body {
   background-color: #f9f9f9;
 }
 h2 {
-  margin-top: 0;
+  margin-top: 10;
 }
 input[type='text'],
 input[type='email'],
@@ -45,7 +45,7 @@ textarea {
   height: 100px;
 }
 .submit-btn {
-  background-color: #1a3c34;
+  background-color: #fcc857;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -65,7 +65,7 @@ textarea {
   vertical-align: middle;
 }
 .social-icons img {
-  width: 30px;
+  width: 40px;
   margin-right: 10px;
 }
 
