--- a/FrontEnd/upload_page/src/home_page_style.css
+++ b/FrontEnd/upload_page/src/home_page_style.css
@@ -269,8 +269,10 @@ select {
 }
 
 .notes_container {
+  width: 80vw;
   margin-top: 16.4vh;
-  margin-left: 0.2vh;
+  margin-bottom: 4vh;
+  margin-left: 3.6vw;
   display: flex;
   flex-direction: row; /* Arrange .notes_cont_box elements horizontally */
   flex-wrap: wrap; /* Allow wrapping of boxes if they exceed container width */
@@ -282,7 +284,7 @@ select {
   left: 16vw;
   top: 0;
   height: 30vh;
-  width: 20vw;
+  width: 22vw;
   border-radius: 2vh;
   background-color: rgb(255, 255, 255);
   display: flex;
@@ -324,11 +326,12 @@ select {
 }
 
 .download_button {
+  position: absolute;
   height: 2.8vh;
   font-size: 16px;
   font-weight: bold;
-  margin-left: 132px;
-  top: 2px;
+  margin-left: 200px;
+  top: 12px;
   background-color: rgb(255, 255, 255);
   outline: none;
   border: none;
@@ -408,27 +411,43 @@ strong {
 }
 
 .date_cont {
+  position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: light;
   font-size: 10px;
   background-color: rgb(255, 255, 255);
   margin-top: 172px;
-  margin-left: -242px;
+  margin-left: 46px;
 }
+
 .note {
   background-color: #fcc857;
 }
 
 #myNotes {
-  background-color: #fcc857;
-  list-style: none; /* Removes the bullets */
   margin: 0; /* Removes default margin */
   padding: 0; /* Removes default padding */
+  margin-left: 0.4vw;
+  height: 100%;
+  width: 100%;
+  background-color: #fcc857;
+  list-style: none; /* Remove default list styling */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; /* Allow items to wrap to the next row */
+  gap: 1px; /* Space between items and rows */
 }
 
 #savedNotes {
-  background-color: #fcc857;
-  list-style: none; /* Removes the bullets */
   margin: 0; /* Removes default margin */
   padding: 0; /* Removes default padding */
+  margin-left: 3vw;
+  height: 100%;
+  width: 100%;
+  background-color: #fcc857;
+  list-style: none; /* Remove default list styling */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; /* Allow items to wrap to the next row */
+  gap: 28px; /* Space between items and rows */
 }
