--- a/FrontEnd/upload_page/src/style.css
+++ b/FrontEnd/upload_page/src/style.css
@@ -503,3 +503,19 @@ select {
   margin-top: 10px; /* Space above the text */
   margin-bottom: 0; /* Remove extra margin below the text */
 }
+
+.success_upload {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  color: black;
+  font-size: 16px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 1);
+  z-index: 9999;
+  display: none;
+  text-align: center;
+}
